Change max-width for body; Fix size of images in projects on mobile; Remove hover layer for projects images

--- a/css/style.css
+++ b/css/style.css
@@ -676,7 +676,7 @@ template {
     max-width: 100%;
   }
   body {
-    max-width: 1423px;
+    max-width: 1550px;
     margin: 0 auto;
   }
 }
@@ -1260,6 +1260,13 @@ template {
   }
   .menu-mobile {
     display: block;
+  }
+  .project-gallery {
+    margin: 15px auto;
+    width: 100%;
+  }
+  .hvr-box:hover .hvr-top {
+    display: none;
   }
 }
 
