--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -35,7 +35,7 @@
 @media(min-width: 1200px) {
 	@include grid('xl');
 	body {
-	max-width: 1423px;
+	max-width: 1550px;
 	margin: 0 auto;
 	}
 }
